--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
+        <p><a href="recipes/ckchipotlebowl.html">Chicken Chipotle Bowl</a></p>
     </body>
 </html>
