Add final ingredients and steps list

--- a/recipes/ckchipotlebowl.html
+++ b/recipes/ckchipotlebowl.html
@@ -18,6 +18,22 @@
                 <li>3 ounces of black or pinto beans</li>
                 <li>1 whole tomato</li>
                 <li>Half a red onion</li>
+                <li>1 cup cooked rice</li>
+                <li>Adobada marinade</li>
+                <li>Salt</li>
             </ul>
+        <p><h2>Steps</h2></p>
+            <ol>
+                <li>Cut up chicken breast into bite-sized cubes. Place into a mixing bowl and mix in adobada marinade and juice of 1 lime.</li>
+                <li>Let chicken rest in fridge for 10 minutes.</li>
+                <li>While chicken rests, begin to roughly chop up cilantro. Dice up tomato and red onion into small pieces.</li>
+                <li>Mix half of the chopped cilantro with the entirety of the tomatoes and red onion. Squeeze half a lime and mix again. After mixing, set aside in fridge.</li>
+                <li>Remove marinated chicken from fridge. Lightly coat a pan to medium-high heat. Place chicken onto pan and let cook for 4 minutes per side. After each flip, lightly glaze pieces of chicken with leftover marinade from bowl.</li>
+                <li>While chicken is cooking, place 1 cup of cooked rice into a mixing bowl. Dump the other half of cilantro into bowl and squeeze the last half of lime over the rice. Add salt to taste, then fully incorporate the rice together.</li>
+                <li>When chicken is finished cooking, take pan off heat and let rest for 4 minutes.</li>
+                <li>Rinse and drain cooked beans of choice.</li>
+                <li>Plate rice and beans into a bowl, adding the rested chicken atop. Place the pico de gallo on top of the chicken.</li>
+                <li>Take a photo for the Gram and enjoy!</li>
+            </ol>
     </body>
 </html>
