Add bsplit.html to index.html

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <p><a href="recipes/ckchipotlebowl.html">Chicken Chipotle Bowl</a></p>
+        <ul> 
+            <a href="recipes/ckchipotlebowl.html">Chicken Chipotle Bowl</a>
+            <a href="recipes/bsplit.html">Banana Split</a>
+        </ul>
     </body>
 </html>
